<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/TVresult"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/bgTvTopLightGrey"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/calc_text"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_7"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:outlineProvider="background"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:textColor="@color/white"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:textColor="@color/white"/>
        <Button
        android:layout_margin="2dp"
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/ButtonLinier2"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:outlineProvider="background"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_5"
            android:onClick="onDigit"
            android:textColor="@color/white"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:textColor="@color/white"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/Multiplication"
            android:textColor="@color/white"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_1"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:outlineProvider="background"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:textColor="@color/white"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:textColor="@color/white"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:onClick="onOperator"
            android:text="@string/Minus"
            android:textColor="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:outlineProvider="background"/>
        <Button
            android:id="@+id/btnDot"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/Dot"
            android:onClick="onDecimalPoint"
            android:textColor="@color/white"
            android:outlineProvider="background"/>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/clr"
            android:onClick="onDelete"
            android:textColor="@color/white"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:onClick="onOperator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/ButtonLinier2"
            android:text="@string/Equal"
            android:onClick="onEqual"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>